--- a/rit/Makefile
+++ b/rit/Makefile
@@ -13,8 +13,8 @@
 #FLAGS0= $(FLAGS)
 # if compiled with gfortran, use -O0 for plot1.f and cont5.f
 F90   = gfortran
-FLAGS = -fdefault-real-8 -O3
-FLAGS0= -fdefault-real-8 -O0
+FLAGS = -std=legacy -fdefault-real-8 -O3
+FLAGS0= -std=legacy -fdefault-real-8 -O0
 
 # main program, FFTs and plot routines
 main  = rit
